# ccomp

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/: alloc.h  cc_string.h  lexer.h  macro.h
src/: alloc.c  cc_alloc.c  cc_alloc.h  cc_asm.c  cc_asm.h  cc_ast.c  cc_ast.h  cc_common.h  cc_parser.c  cc_parser.h  cc_scanner.c  cc_scanner.h  cc_string.c  cc_string.h  lexer.c  lexer.cpp  lexer.h  main.c  main.cpp  string.c
tests/: if_cond.c
